# ros_lidar_obstacle_detection

./: .cppcheck-all.sh  .gitignore  .travis.yml  CMakeLists.txt  README.md  package.xml
include/obstacle_detection/: boundary.h  lidar_obstacle_detection.h  obstacle.h  obstacletype.h  point.h  point2d.h
launch/: obstacle_detection_test.launch
lib/lidar_obstacle_detection/: .build.sh  .clang-tidy
lib/lidar_obstacle_detection/include/: cluster.h  filter.h
lib/lidar_obstacle_detection/src/: boundary.cpp  lidar_obstacle_detection.cpp
lib/lidar_obstacle_detection/tests/: clusterTest.cpp  geometryTest.cpp  test.cpp
lidar_obstacle_detection/: CMakeLists.txt
lidar_obstacle_detection/cmake/: lidar_obstacle_detectionConfig.cmake
lidar_obstacle_detection/include/: boundary.h  classification.h  cluster.h  filter.h  lidar_obstacle_detection.h  obstacle.h  point2d.h
lidar_obstacle_detection/src/: boundary.cpp  classification.cpp  cluster.cpp  filter.cpp  lidar_obstacle_detection.cpp  obstacle.cpp  point2d.cpp
lidar_obstacle_detection/tests/: classificationTest.cpp  clusterTest.cpp  filterTest.cpp  geometryTest.cpp  pointTest.cpp
msg/: obstacles.msg
ros_lidar_obstacle_detection/: CMakeLists.txt  package.xml
ros_lidar_obstacle_detection/lib/lidar_obstacle_detection/include/: boundary.h  obstacle.h
ros_lidar_obstacle_detection/lib/lidar_obstacle_detection/src/: boundary.cpp  cluster.cpp
ros_lidar_obstacle_detection/src/: log_lidar_data_node.cpp  obstacle_detection_node.cpp
src/: boundary.cpp  lidar_obstacle_detection.cpp  obstacle.cpp  obstacle_detection.cpp  point.cpp  point2d.cpp
